평택 모바일 수정

--- a/pyeongtaek/assets/css/style.css
+++ b/pyeongtaek/assets/css/style.css
@@ -78,9 +78,9 @@ main .gnbNav-inner article:last-child div a { display: block; font-size: 3.6111v
 main section#mainSlider #slider .slider-item { position: relative; }
 @media (min-width: 320px) { main section#mainSlider #slider .slider-item { width: 100%; height: 50vh; } }
 @media (min-width: 768px) { main section#mainSlider #slider .slider-item { width: 1920px; height: 700px; } }
-@media (min-width: 320px) { main section#mainSlider #slider .slider-item:nth-child(2) { background: url("../images/img-mainM-01.png") no-repeat; background-size: cover; }
+@media (min-width: 320px) { main section#mainSlider #slider .slider-item:nth-child(2) { background: url("../images/capture/img-mainM-01.png") no-repeat; background-size: cover; }
   main section#mainSlider #slider .slider-item:nth-child(2) .icon-mainbanner { display: none; } }
-@media (min-width: 786px) { main section#mainSlider #slider .slider-item:nth-child(2) { background: url("../images/img-main-01.png") no-repeat; background-size: cover; }
+@media (min-width: 786px) { main section#mainSlider #slider .slider-item:nth-child(2) { background: url("../images/capture/img-main-01.png") no-repeat; background-size: cover; }
   main section#mainSlider #slider .slider-item:nth-child(2) .icon-mainbanner { display: block; } }
 main section#mainSlider #slider .slider-item:nth-child(2) div { position: absolute; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); text-align: center; }
 @media (min-width: 320px) { main section#mainSlider #slider .slider-item:nth-child(2) div { top: 40%; width: 100%; } }
@@ -92,9 +92,9 @@ main section#mainSlider #slider .slider-item:nth-child(2) div h2 { margin-bottom
 main section#mainSlider #slider .slider-item:nth-child(2) div p { margin-top: 10px; }
 @media (min-width: 320px) { main section#mainSlider #slider .slider-item:nth-child(2) div p { font-size: 3.3333vw; } }
 @media (min-width: 780px) { main section#mainSlider #slider .slider-item:nth-child(2) div p { font-size: 18px; } }
-@media (min-width: 320px) { main section#mainSlider #slider .slider-item:nth-child(3) { background: url("../images/img-mainM-02.png") no-repeat; background-size: cover; }
+@media (min-width: 320px) { main section#mainSlider #slider .slider-item:nth-child(3) { background: url("../images/capture/img-mainM-02.png") no-repeat; background-size: cover; }
   main section#mainSlider #slider .slider-item:nth-child(3) .icon-mainbanner { display: none; } }
-@media (min-width: 768px) { main section#mainSlider #slider .slider-item:nth-child(3) { background: url("../images/img-main-02.png") no-repeat; background-size: cover; }
+@media (min-width: 768px) { main section#mainSlider #slider .slider-item:nth-child(3) { background: url("../images/capture/img-main-02.png") no-repeat; background-size: cover; }
   main section#mainSlider #slider .slider-item:nth-child(3) .icon-mainbanner { display: block; } }
 main section#mainSlider #slider .slider-item:nth-child(3) div { position: absolute; text-align: left; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
 @media (min-width: 320px) { main section#mainSlider #slider .slider-item:nth-child(3) div { top: 85%; left: 64%; width: 100%; } }
@@ -106,8 +106,8 @@ main section#mainSlider #slider .slider-item:nth-child(3) div h2 { font-weight: 
 main section#mainSlider #slider .slider-item:nth-child(3) div p { margin-top: 10px; color: #ffffff; }
 @media (min-width: 320px) { main section#mainSlider #slider .slider-item:nth-child(3) div p { font-size: 3.3333vw; } }
 @media (min-width: 768px) { main section#mainSlider #slider .slider-item:nth-child(3) div p { font-size: 23px; } }
-@media (min-width: 320px) { main section#mainSlider #slider .slider-item:nth-child(4) { background: url("../images/img-mainM-03.png") no-repeat; background-size: cover; } }
-@media (min-width: 768px) { main section#mainSlider #slider .slider-item:nth-child(4) { background: url("../images/img-main-03.png") no-repeat; background-size: cover; } }
+@media (min-width: 320px) { main section#mainSlider #slider .slider-item:nth-child(4) { background: url("../images/capture/img-mainM-03.png") no-repeat; background-size: cover; } }
+@media (min-width: 768px) { main section#mainSlider #slider .slider-item:nth-child(4) { background: url("../images/capture/img-main-03.png") no-repeat; background-size: cover; } }
 main section#mainSlider #slider .slider-item:nth-child(4) div { position: absolute; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); text-align: center; }
 @media (min-width: 320px) { main section#mainSlider #slider .slider-item:nth-child(4) div { width: 100%; } }
 @media (min-width: 768px) { main section#mainSlider #slider .slider-item:nth-child(4) div { width: 30%; } }
@@ -161,16 +161,15 @@ main section#container article.parking-realtime div#realtimeSlider { position: r
   main section#container article.parking-realtime div#realtimeSlider .slick-list { height: inherit; left: 0; } }
 main section#container article.parking-realtime div#realtimeSlider .slick-prev, main section#container article.parking-realtime div#realtimeSlider .slick-next { position: absolute; border: 0; top: 50%; z-index: 10; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
 main section#container article.parking-realtime div#realtimeSlider .slick-prev:hover, main section#container article.parking-realtime div#realtimeSlider .slick-prev:focus, main section#container article.parking-realtime div#realtimeSlider .slick-next:hover, main section#container article.parking-realtime div#realtimeSlider .slick-next:focus { outline: none; border: none; }
-main section#container article.parking-realtime div#realtimeSlider .slick-prev { -webkit-transform: translateY(-50%) rotate(180deg); transform: translateY(-50%) rotate(180deg); }
 @media (min-width: 320px) { main section#container article.parking-realtime div#realtimeSlider .slick-prev { width: 35px; height: 35px; background: url("../images/sprite/mainM-sprites.png") -65px -56px; left: -15.1875vw; -webkit-transform: translateY(-50%) rotate(180deg); transform: translateY(-50%) rotate(180deg); } }
 @media (min-width: 768px) { main section#container article.parking-realtime div#realtimeSlider .slick-prev { width: 50px; height: 50px; background: url("../images/sprite/more-sprites.png") -10px -10px; left: -70px; } }
 @media (min-width: 320px) { main section#container article.parking-realtime div#realtimeSlider .slick-prev:hover { width: 35px; height: 35px; background: url("../images/sprite/mainM-sprites.png") -10px -56px; -webkit-transform: translateY(-50%) rotate(0deg); transform: translateY(-50%) rotate(0deg); } }
-@media (min-width: 768px) { main section#container article.parking-realtime div#realtimeSlider .slick-prev:hover { background: url("../images/sprite/more-sprites.png") -10px -80px; } }
+@media (min-width: 768px) { main section#container article.parking-realtime div#realtimeSlider .slick-prev:hover { width: 50px; height: 50px; background: url("../images/sprite/more-sprites.png") -10px -80px; -webkit-transform: translateY(-50%) rotate(180deg); transform: translateY(-50%) rotate(180deg); } }
 main section#container article.parking-realtime div#realtimeSlider .slick-next { right: -70px; }
 @media (min-width: 320px) { main section#container article.parking-realtime div#realtimeSlider .slick-next { width: 35px; height: 35px; background: url("../images/sprite/mainM-sprites.png") -65px -56px; } }
-@media (min-width: 768px) { main section#container article.parking-realtime div#realtimeSlider .slick-next { width: 50px; height: 50px; background: url("../images/sprite/more-sprites.png") -10px -10px; left: -70px; } }
+@media (min-width: 768px) { main section#container article.parking-realtime div#realtimeSlider .slick-next { width: 50px; height: 50px; background: url("../images/sprite/more-sprites.png") -10px -10px; } }
 @media (min-width: 320px) { main section#container article.parking-realtime div#realtimeSlider .slick-next:hover { width: 35px; height: 35px; background: url("../images/sprite/mainM-sprites.png") -10px -56px; -webkit-transform: translateY(-50%) rotate(180deg); transform: translateY(-50%) rotate(180deg); } }
-@media (min-width: 768px) { main section#container article.parking-realtime div#realtimeSlider .slick-next:hover { background: url("../images/sprite/more-sprites.png") -10px -80px; } }
+@media (min-width: 768px) { main section#container article.parking-realtime div#realtimeSlider .slick-next:hover { width: 50px; height: 50px; background: url("../images/sprite/more-sprites.png") -10px -80px; -webkit-transform: translateY(-50%) rotate(0deg); transform: translateY(-50%) rotate(0deg); } }
 @media (min-width: 320px) { main section#container article.parking-realtime div#realtimeSlider div.realtimeslider-item { width: 55.1875vw !important; } }
 @media (min-width: 768px) { main section#container article.parking-realtime div#realtimeSlider div.realtimeslider-item { width: 230px !important; margin: 0 15px; } }
 main section#container article.parking-realtime div#realtimeSlider div.realtimeslider-item:hover div.realtime > div { -webkit-animation: hoverAni .5s forwards; animation: hoverAni .5s forwards; }
@@ -185,8 +184,8 @@ main section#container article.parking-realtime div#realtimeSlider div.realtimes
 main section#container article.parking-realtime div#realtimeSlider div.realtimeslider-item div.realtime > div > ul li { text-align: center; width: 100%; }
 main section#container article.parking-realtime div#realtimeSlider div.realtimeslider-item div.realtime > div > ul li:first-child { color: #ffffff; font-size: 14px; }
 main section#container article.parking-realtime div#realtimeSlider div.realtimeslider-item div.realtime > div > ul li:last-child { margin-top: 5px; color: #FFF2AF; font-size: 17px; }
-@media (min-width: 320px) { main section#container article.parking-appeal { background: url("../images/img-mainM-04.png") no-repeat; background-size: cover; height: 11.1111vh; } }
-@media (min-width: 768px) { main section#container article.parking-appeal { background: url("../images/img-main-04.png") no-repeat; background-size: cover; height: 170px; } }
+@media (min-width: 320px) { main section#container article.parking-appeal { background: url("../images/capture/img-mainM-04.png") no-repeat; background-size: cover; height: 11.1111vh; } }
+@media (min-width: 768px) { main section#container article.parking-appeal { background: url("../images/capture/img-main-04.png") no-repeat; background-size: cover; height: 170px; } }
 main section#container article.parking-appeal .parkingbox-inner { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
 main section#container article.parking-appeal .parkingbox-inner > div { position: relative; }
 @media (min-width: 320px) { main section#container article.parking-appeal .parkingbox-inner > div { padding: 0 3.125vw; } }
@@ -254,7 +253,7 @@ main section#container article.parking-info .parkingbox-inner section ul li a p:
 main section#container .parkingbox-inner { position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
 @media (min-width: 320px) { main section#container .parkingbox-inner { width: 100%; } }
 @media (min-width: 768px) { main section#container .parkingbox-inner { width: 1200px; } }
-main section#container .parkingbox-inner div.realtime { background: url("../images/img-temp-01.png") no-repeat; background-size: cover; background-size: contain; }
+main section#container .parkingbox-inner div.realtime { background: url("../images/capture/img-temp-01.png") no-repeat; background-size: cover; background-size: contain; }
 
 /* Footer */
 footer { background: #333333; }
