--- a/pyeongtaek/assets/sass/layout/_contents.scss
+++ b/pyeongtaek/assets/sass/layout/_contents.scss
@@ -583,8 +583,6 @@ main{
                                 background: url('../images/sprite/more-sprites.png') -10px -10px; 
                                 left: -70px;    
                             }
-                            
-                            transform: translateY(-50%) rotate(180deg);
 
                             &:hover{
                                 @media (min-width: 320px){
@@ -594,7 +592,9 @@ main{
                                 }
 
                                 @media (min-width: 768px){
-                                    background: url('../images/sprite/more-sprites.png') -10px -80px; 
+                                    width: 50px; height: 50px;
+                                    background: url('../images/sprite/more-sprites.png') -10px -80px;
+                                    transform: translateY(-50%) rotate(180deg); 
                                 }
                                  
                             }
@@ -608,7 +608,7 @@ main{
                             @media (min-width: 768px){
                                 width: 50px; height: 50px;
                                 background: url('../images/sprite/more-sprites.png') -10px -10px; 
-                                left: -70px;    
+                                
                             }
                             &:hover{
                                 @media (min-width: 320px){
@@ -618,7 +618,9 @@ main{
                                 }
 
                                 @media (min-width: 768px){
-                                    background: url('../images/sprite/more-sprites.png') -10px -80px;  
+                                    width: 50px; height: 50px;
+                                    background: url('../images/sprite/more-sprites.png') -10px -80px; 
+                                    transform: translateY(-50%) rotate(0deg);   
                                 }   
                             }
                         }
