--- a/guideLine/assets/sass/components/_common.scss
+++ b/guideLine/assets/sass/components/_common.scss
@@ -37,12 +37,30 @@
          url('../fonts/NanumGothic-ExtraBold.ttf') format('truetype');
   }
    
-body, table, div, p {
-    font-family:'Nanum Gothic';
-    font-size: 16px;
+body, table, div, p, ul li {
+    margin-bottom: 10px;
+
+    font : {
+        family:'Nanum Gothic';
+        size: 16px;
+    }
 }
 
-/* H tag */
+ul {
+    margin-bottom: 50px;
+
+    li{
+        position: relative;
+        margin-top: 10px;
+        left: 10px;
+        &:before{
+            content: "-";
+            position: absolute;
+            left: -10px;
+        }
+    }
+}
+/* H Tag */
 h1{
     font-size: 32px;
 }
@@ -112,4 +130,15 @@ a{
     height: 40px;
     line-height: 40px;
     box-sizing: border-box;
+}
+
+.sr-only{
+	position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;	
 }
