--- a/guideLine/assets/sass/style.scss
+++ b/guideLine/assets/sass/style.scss
@@ -6,13 +6,15 @@
 
 @import
     "layout/header",
-    "layout/contents",
-    "layout/footer";
+    "layout/footer",
+    "layout/contents";
+    
 
 @import
     "components/btn",
-    "components/bullet",
-    "components/common",
     "components/form",
-    "components/table";
+    "components/table",
+    "components/images",
+    "components/bullet",
+    "components/common";
 
