--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -5,6 +5,16 @@ header section h1 { display: inline-block; }
 header section nav#menuList { display: -webkit-box; display: -ms-flexbox; display: flex; width: 70%; float: right; }
 header section nav#menuList div { width: 120px; text-align: center; }
 
+/* Footer */
+footer { border-top: 2px solid; background: #000000; color: #ffffff; width: 100%; min-height: 100px; }
+footer article { text-align: center; padding: 20px; }
+footer article a { color: #ffffff; }
+footer article ul { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+footer article ul li { padding: 10px; border: 1px solid; width: 200px; }
+footer article ul li:before { content: ""; }
+footer article:first-child { padding-bottom: 10px; }
+footer article:last-child { padding-top: 0; }
+
 /* Contents */
 #sliderContainer { border: 1px solid; width: 100%; height: 400px; }
 #sliderContainer .post-wrapper .post { font-size: 40px; font-weight: 700; }
@@ -31,27 +41,53 @@ aside.Quick ul li { margin: 5px; text-align: left; font-size: 14px; }
 #container section.projectList .project-item:nth-child(4n) { margin-right: 0; }
 #container section.projectList .project-item figure img { width: 100%; height: 170px; }
 #container section.projectList .project-item figure figcaption { margin-top: 20px; text-align: center; }
-#container #clone .clone { background: url("../images/img-git-01.png") no-repeat; height: 400px; }
-
-/* Footer */
-footer { border-top: 2px solid; background: #000000; color: #ffffff; width: 100%; min-height: 100px; }
-footer article { text-align: center; padding: 20px; }
-footer article a { color: #ffffff; }
-footer article ul { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
-footer article ul li { padding: 10px; border: 1px solid; width: 200px; }
-footer article:first-child { padding-bottom: 10px; }
-footer article:last-child { padding-top: 0; }
+#container #clone .clone { background: url("../images/img-git-01.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
 
 /* Button */
+.btn-row { margin: 50px auto 0; width: 100%; }
+.btn-row .one-btn { display: block; background: #0075C1 !important; border: 0; border-radius: 4px; width: 200px !important; height: 50px; text-align: center; color: #ffffff !important; line-height: 50px; }
+@media (min-width: 320px) { .btn-row .one-btn { font-size: 4.1667vw; } }
+@media (min-width: 768px) { .btn-row .one-btn { font-size: 15px; } }
+.btn-row.has-one { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; }
+.btn-row .admin-btn { background: #0075C1 !important; font-size: 14px; }
+.btn-row .admin-btn:hover { background: #0066a8 !important; color: #fff !important; }
+.btn-row .admin-btn:active, .btn-row .admin-btn:visited, .btn-row .admin-btn:focus { background: #00568e !important; color: #fff !important; }
+@media (min-width: 320px) { .btn-row .admin-btn.ex { width: 80px; height: 40px; } }
+@media (min-width: 768px) { .btn-row .admin-btn.ex { width: 100px; height: 90px; } }
+@media (min-width: 320px) { .btn-row .admin-btn.white { display: block; border: 1px solid #0075C1; border-radius: 4px; background: #ffffff !important; width: 100px; height: 40px; text-align: center; color: #0075C1 !important; font-size: 14px; line-height: 40px; line-height: 35px; } }
+@media (min-width: 768px) { .btn-row .admin-btn.white { display: block; border: 1px solid #0075C1; border-radius: 4px; background: #ffffff !important; width: 120px; height: 50px; text-align: center; color: #0075C1 !important; font-size: 14px; line-height: 50px; line-height: 40px; } }
+
+/* Form */
+/* Table */
+.default-table { margin-top: 15px; margin-bottom: 20px; border: 1px solid; width: 100%; }
+.default-table tr th, .default-table tr td { padding: 10px; border: 1px solid; vertical-align: middle; white-space: nowrap; }
+.default-table tr th { background: #cccccc; font-weight: 400; }
+
+.button-01 { background: url("../images/img-guideline-button-01.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
+.button-02 { background: url("../images/img-guideline-button-02.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; background-size: cover; }
+
+.button-03 { background: url("../images/img-guideline-button-03.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; background-size: cover; }
+
+.button-04 { background: url("../images/img-guideline-button-04.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
+.button-05 { background: url("../images/img-guideline-button-05.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
+.button-06 { background: url("../images/img-guideline-button-06.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
 /* Bullet */
 /* Common */
 /* Font-face */
 @font-face { font-family: 'Nanum Gothic'; font-style: normal; font-weight: 400; src: url("../fonts/NanumGothic-Regular.eot"); src: url("../fonts/NanumGothic-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-Regular.woff2") format("woff2"), url("../fonts/NanumGothic-Regular.woff") format("woff"), url("../fonts/NanumGothic-Regular.ttf") format("truetype"); }
 @font-face { font-family: 'Nanum Gothic'; font-style: normal; font-weight: 700; src: url("../fonts/NanumGothic-Bold.eot"); src: url("../fonts/NanumGothic-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-Bold.woff2") format("woff2"), url("../fonts/NanumGothic-Bold.woff") format("woff"), url("../fonts/NanumGothic-Bold.ttf") format("truetype"); }
 @font-face { font-family: 'Nanum Gothic'; font-style: normal; font-weight: 800; src: url("../fonts/NanumGothic-ExtraBold.eot"); src: url("../fonts/NanumGothic-ExtraBold.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-ExtraBold.woff2") format("woff2"), url("../fonts/NanumGothic-ExtraBold.woff") format("woff"), url("../fonts/NanumGothic-ExtraBold.ttf") format("truetype"); }
-body, table, div, p { font-family: 'Nanum Gothic'; font-size: 16px; }
+body, table, div, p, ul li { margin-bottom: 10px; font-family: 'Nanum Gothic'; font-size: 16px; }
 
-/* H tag */
+ul { margin-bottom: 50px; }
+ul li { position: relative; margin-top: 10px; left: 10px; }
+ul li:before { content: "-"; position: absolute; left: -10px; }
+
+/* H Tag */
 h1 { font-size: 32px; }
 
 h2 { margin-bottom: 15px; padding: 15px 0; border-bottom: 2px solid #000000; font-size: 30px; font-weight: 600; }
@@ -75,10 +111,6 @@ a:hover { font-weight: 700; }
 
 .notice { margin-bottom: 10px; padding: 0 10px; border: 1px solid #ff0000; background: #f8dade; height: 40px; line-height: 40px; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-/* Form */
-/* Table */
-.default-table { margin-top: 15px; margin-bottom: 20px; border: 1px solid; width: 100%; }
-.default-table tr th, .default-table tr td { padding: 10px; border: 1px solid; vertical-align: middle; white-space: nowrap; }
-.default-table tr th { background: #cccccc; font-weight: 400; }
+.sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); border: 0; }
 
 /*# sourceMappingURL=style.css.map */
