--- a/guideLine/html/layout/header.html
+++ b/guideLine/html/layout/header.html
@@ -7,6 +7,7 @@
         <div><a href="../sub/sass.html">SASS</a></div>
         <div><a href="../sub/github.html">Git</a></div>
         <div><a href="../sub/jquery.html">JQuery</a></div>
+        <div><a href="../sub/Vue.html">Vue</a></div>
         <div><a href="../sub/svelte.html">Svelte</a></div>
     </nav>
 </section>
