--- a/guideLine/assets/sass/base/_variableList.scss
+++ b/guideLine/assets/sass/base/_variableList.scss
@@ -9,5 +9,6 @@ $black    : #000000 !default;
 $red      : #ff0000 !default;
 
 $h3       : #333333 !default;
+$h4       : #ffa500 !default;
 $btnColor : #0075C1 !default;
 $bgBlue   : #0075C1 !default;
