--- a/guideLine/html/layout/header.html
+++ b/guideLine/html/layout/header.html
@@ -2,8 +2,7 @@
     <h1><a href="../main/index.html">What to do!?</a></h1>
     <nav id="menuList">
         <div><a href="../sub/guideline.html">GuideLine</a></div>
-        <div><a href="../sub/htm.html">HTML5</a></div>
-        <div><a href="../sub/css.html">CSS3</a></div>
+        <div><a href="../sub/htmcss.html">HTML5</a></div>
         <div><a href="../sub/sass.html">SASS</a></div>
         <div><a href="../sub/github.html">Git</a></div>
         <div><a href="../sub/jquery.html">JQuery</a></div>
