--- a/guideLine/assets/sass/components/_common.scss
+++ b/guideLine/assets/sass/components/_common.scss
@@ -38,7 +38,12 @@ src: url('../fonts/NanumGothic-ExtraBold.eot?#iefix') format('embedded-opentype'
         url('../fonts/NanumGothic-ExtraBold.woff') format('woff'),
         url('../fonts/NanumGothic-ExtraBold.ttf') format('truetype');
 }
-   
+
+/* font-color */
+.red{
+    color: $red;
+}
+
 body, table, div, p, ul li {
     margin-bottom: 10px;
 
@@ -125,7 +130,7 @@ ol{
     list-style: decimal-leading-zero;  
 }
 
-xmp,
+pre,
 .explanation-box{
     margin: 15px 0;
     padding: 10px 20px;
@@ -182,10 +187,12 @@ a{
         box-sizing:border-box;
 
         &[data-score="100%"]{width:100%}
+        &[data-score="90%"]{width:90%}
         &[data-score="80%"]{width:80%}
+        &[data-score="70%"]{width:70%}
         &[data-score="50%"]{width:50%}
         &[data-score="30%"]{width:30%}
-        &[data-score="10%"]{width:10%}
+        &[data-score="20%"]{width:20%}
 
         &:before {
             position: absolute;
@@ -209,5 +216,13 @@ figure{
 
     figcaption{
         text-align: center;
+    }
+}
+
+#index{
+    figure{
+        padding: 0;
+        border: 0;
+        width: 100%;
     }
 }
