--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -4,7 +4,9 @@ header section { margin: 0 auto; height: 100px; line-height: 100px; }
 @media (min-width: 320px) { header section { width: 100%; } }
 @media (min-width: 768px) { header section { width: 1000px; } }
 header section h1 { display: inline-block; }
-header section nav#menuList { display: -webkit-box; display: -ms-flexbox; display: flex; width: 70%; float: right; }
+header section nav#menuList { width: 70%; float: right; }
+@media (min-width: 320px) { header section nav#menuList { display: none; } }
+@media (min-width: 768px) { header section nav#menuList { display: -webkit-box; display: -ms-flexbox; display: flex; } }
 header section nav#menuList div { width: 120px; text-align: center; }
 
 /* Footer */
@@ -18,6 +20,9 @@ footer article:first-child { padding-bottom: 10px; }
 footer article:last-child { padding-top: 0; }
 
 /* Contents */
+@media (min-width: 320px) { main { padding: 0 10px; } }
+@media (min-width: 768px) { main { padding: 0; } }
+
 #sliderContainer { border: 1px solid; width: 100%; height: 400px; }
 #sliderContainer .post-wrapper .post { font-size: 40px; font-weight: 700; }
 @media (min-width: 320px) { #sliderContainer .post-wrapper .post { width: 100%; height: 30vh; } }
@@ -31,6 +36,8 @@ footer article:last-child { padding-top: 0; }
 #sliderContainer .post-wrapper .post:nth-child(8) { color: purple; }
 
 aside.Quick { position: fixed; padding-bottom: 20px; border: 1px solid; background: #ffffff; width: 130px; height: auto; bottom: 10px; right: 10px; }
+@media (min-width: 320px) { aside.Quick { display: none; } }
+@media (min-width: 768px) { aside.Quick { display: block; } }
 aside.Quick h2 { text-align: center; font-size: 18px; font-weight: 600; border-bottom: 2px solid #cccccc; background: #000000; color: #ffffff; }
 aside.Quick ul { margin: 0 auto; border: 1px solid; background: #cccccc; width: 80%; }
 aside.Quick ul li { margin: 5px; text-align: left; font-size: 14px; }
@@ -85,6 +92,9 @@ aside.Quick ul li { margin: 5px; text-align: left; font-size: 14px; }
 @font-face { font-family: 'Nanum Gothic'; font-style: normal; font-weight: 400; src: url("../fonts/NanumGothic-Regular.eot"); src: url("../fonts/NanumGothic-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-Regular.woff2") format("woff2"), url("../fonts/NanumGothic-Regular.woff") format("woff"), url("../fonts/NanumGothic-Regular.ttf") format("truetype"); }
 @font-face { font-family: 'Nanum Gothic'; font-style: normal; font-weight: 700; src: url("../fonts/NanumGothic-Bold.eot"); src: url("../fonts/NanumGothic-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-Bold.woff2") format("woff2"), url("../fonts/NanumGothic-Bold.woff") format("woff"), url("../fonts/NanumGothic-Bold.ttf") format("truetype"); }
 @font-face { font-family: 'Nanum Gothic'; font-style: normal; font-weight: 800; src: url("../fonts/NanumGothic-ExtraBold.eot"); src: url("../fonts/NanumGothic-ExtraBold.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-ExtraBold.woff2") format("woff2"), url("../fonts/NanumGothic-ExtraBold.woff") format("woff"), url("../fonts/NanumGothic-ExtraBold.ttf") format("truetype"); }
+/* font-color */
+.red { color: #ff0000; }
+
 body, table, div, p, ul li { margin-bottom: 10px; font-family: 'Nanum Gothic'; font-size: 16px; }
 
 ul { list-style-type: none; }
@@ -109,7 +119,7 @@ h6 { font-size: 22px; }
 
 ol { position: relative; left: 30px; list-style: decimal-leading-zero; }
 
-xmp, .explanation-box { margin: 15px 0; padding: 10px 20px; border: 1px solid; width: 100%; min-height: 40px; -webkit-box-sizing: border-box; box-sizing: border-box; }
+pre, .explanation-box { margin: 15px 0; padding: 10px 20px; border: 1px solid; width: 100%; min-height: 40px; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 .bold { font-weight: 900; color: brown; }
 
@@ -122,14 +132,18 @@ a:hover { font-weight: 700; }
 
 .graph li { position: relative; margin: 10px 0; padding: 15px  20px; border-radius: 50px; background: -webkit-gradient(linear, left top, right top, from(#6861e8), to(#be00ff)); background: linear-gradient(90deg, #6861e8 0%, #be00ff 100%); left: 0; color: white; -webkit-box-sizing: border-box; box-sizing: border-box; }
 .graph li[data-score="100%"] { width: 100%; }
+.graph li[data-score="90%"] { width: 90%; }
 .graph li[data-score="80%"] { width: 80%; }
+.graph li[data-score="70%"] { width: 70%; }
 .graph li[data-score="50%"] { width: 50%; }
 .graph li[data-score="30%"] { width: 30%; }
-.graph li[data-score="10%"] { width: 10%; }
+.graph li[data-score="20%"] { width: 20%; }
 .graph li:before { position: absolute; content: attr(data-score); left: auto; right: 20px; }
 
 figure { display: block; margin-bottom: 20px; padding: 10px; border: 1px solid; width: 33%; }
 figure img { width: 100%; }
 figure figcaption { text-align: center; }
+
+#index figure { padding: 0; border: 0; width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
