--- a/guideLine/assets/sass/layout/_header.scss
+++ b/guideLine/assets/sass/layout/_header.scss
@@ -33,10 +33,17 @@ header {
         }
         nav{
             &#menuList{
-                display:flex;
+                
                 width: 70%;
                 float: right;
-    
+                
+                @media (min-width: 320px){
+                    display:none;    
+                }
+
+                @media (min-width: 768px){
+                    display:flex;
+                }
                 div{
                     width: 120px;
                     text-align: center;
