--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -21,7 +21,7 @@ footer article:last-child { padding-top: 0; }
 
 /* Contents */
 @media (min-width: 320px) { main { padding: 0 10px; } }
-@media (min-width: 768px) { main { padding: 0; } }
+@media (min-width: 768px) { main { padding: 0; min-height: 623px; } }
 
 #sliderContainer { border: 1px solid; width: 100%; height: 400px; }
 #sliderContainer .post-wrapper .post { font-size: 40px; font-weight: 700; }
@@ -35,7 +35,7 @@ footer article:last-child { padding-top: 0; }
 #sliderContainer .post-wrapper .post:nth-child(7) { color: Indigo; }
 #sliderContainer .post-wrapper .post:nth-child(8) { color: purple; }
 
-aside.Quick { position: fixed; padding-bottom: 20px; border: 1px solid; background: #ffffff; width: 130px; height: auto; bottom: 10px; right: 10px; }
+aside.Quick { position: fixed; padding-bottom: 20px; border: 1px solid; background: #ffffff; width: 130px; height: auto; bottom: 80px; right: 20px; }
 @media (min-width: 320px) { aside.Quick { display: none; } }
 @media (min-width: 768px) { aside.Quick { display: block; } }
 aside.Quick h2 { text-align: center; font-size: 18px; font-weight: 600; border-bottom: 2px solid #cccccc; background: #000000; color: #ffffff; }
@@ -74,12 +74,14 @@ aside.Quick ul li { margin: 5px; text-align: left; font-size: 14px; }
 .default-table tr th, .default-table tr td { padding: 10px; border: 1px solid; vertical-align: middle; white-space: wrap; word-break: keep-all; line-height: 1.5; }
 .default-table tr th { background: #cccccc; font-weight: 400; }
 
+/* Font */
 .font-01 { background: url("../images/img-guideline-font-01.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 100px; }
 
 .font-02 { background: url("../images/img-guideline-font-02.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 100px; }
 
 .font-03 { background: url("../images/img-guideline-font-03.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 100px; }
 
+/* Bullet */
 .bullet-01 { background: url("../images/img-guideline-bullet-01.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 100px; }
 
 .bullet-02 { background: url("../images/img-guideline-bullet-02.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 100px; }
@@ -102,6 +104,23 @@ aside.Quick ul li { margin: 5px; text-align: left; font-size: 14px; }
 
 .button-06 { background: url("../images/img-guideline-button-06.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
 
+.button-07 { background: url("../images/img-guideline-button-07.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
+.button-08 { background: url("../images/img-guideline-button-08.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
+.button-09 { background: url("../images/img-guideline-button-09.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
+.button-10 { background: url("../images/img-guideline-button-10.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
+.button-11 { background: url("../images/img-guideline-button-11.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
+/* Table */
+.table-01 { background: url("../images/img-guideline-table-01.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
+.table-02 { background: url("../images/img-guideline-table-02.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
+.table-03 { background: url("../images/img-guideline-table-03.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; }
+
 /* Bullet */
 /* Common */
 /* Font-face */
@@ -112,6 +131,8 @@ aside.Quick ul li { margin: 5px; text-align: left; font-size: 14px; }
 .red { color: #ff0000; }
 
 body, table, div, p, ul li { margin-bottom: 10px; font-family: 'Nanum Gothic'; font-size: 16px; }
+
+body { margin-bottom: 0; }
 
 ul { list-style-type: none; }
 ul li { position: relative; margin-top: 10px; left: 10px; }
